--- a/Imc/Imc.csproj
+++ b/Imc/Imc.csproj
@@ -17,4 +17,10 @@
     <ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Components\" />
+    <Folder Include="Pages\" />
+    <Folder Include="wwwroot\js\" />
+  </ItemGroup>
+
 </Project>
