--- a/.github/workflows/blazor-deploy.yml
+++ b/.github/workflows/blazor-deploy.yml
@@ -17,6 +17,9 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: '8.0.101'
+    
+    - name: List files in the repository
+      run: ls -R
 
     - name: Change to project directory
       run: cd ./Imc
