--- a/.github/workflows/blazor-deploy.yml
+++ b/.github/workflows/blazor-deploy.yml
@@ -17,7 +17,10 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: '8.0.101'
-    
+        
+    - name: Change to project directory
+      run: cd Imc
+
     - name: Restore dependencies
       run: dotnet restore
 
