--- a/.github/workflows/blazor-deploy.yml
+++ b/.github/workflows/blazor-deploy.yml
@@ -18,11 +18,8 @@ jobs:
       with:
         dotnet-version: '8.0.101'
         
-    - name: Change to project directory
-      run: cd Imc
-
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore --project Imc/Imc.csproj
 
     - name: Build project
       run: dotnet publish --configuration Release --output ./dist /p:PublishSingleFile=true /p:PublishTrimmed=true
