--- a/.github/workflows/blazor-deploy.yml
+++ b/.github/workflows/blazor-deploy.yml
@@ -19,7 +19,7 @@ jobs:
         dotnet-version: '8.0.101'
         
     - name: Restore dependencies
-      run: dotnet restore --project Imc/Imc.csproj
+      run: ls
 
     - name: Build project
       run: dotnet publish --configuration Release --output ./dist /p:PublishSingleFile=true /p:PublishTrimmed=true
