--- a/.github/workflows/blazor-deploy.yml
+++ b/.github/workflows/blazor-deploy.yml
@@ -18,6 +18,9 @@ jobs:
       with:
         dotnet-version: '8.0.101'
         
+    - name: Change to project directory
+      run: cd Imc
+
     - name: Restore dependencies
       run: ls
 
