--- a/.github/workflows/blazor-deploy.yml
+++ b/.github/workflows/blazor-deploy.yml
@@ -24,8 +24,7 @@ jobs:
 
     - name: Build project
       run: | 
-          cd Imc
-          && dotnet publish --configuration Release -o ../dist /p:PublishSingleFile=false /p:PublishTrimmed=true
+          cd Imc && dotnet publish --configuration Release -o ../dist /p:PublishSingleFile=false /p:PublishTrimmed=true
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
