--- a/.github/workflows/blazor-deploy.yml
+++ b/.github/workflows/blazor-deploy.yml
@@ -28,7 +28,7 @@ jobs:
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
-    - run : cd Imc
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ../dist
+    - run : ls && cd Imc && ls
+      # with:
+      #   github_token: ${{ secrets.GITHUB_TOKEN }}
+      #   publish_dir: ../dist
