--- a/Imc/Properties/launchSettings.json
+++ b/Imc/Properties/launchSettings.json
@@ -17,7 +17,8 @@
       "applicationUrl": "http://localhost:5239",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "launchUrl": "carnacode-balta-2024-desafio-03"
     },
     "https": {
       "commandName": "Project",
@@ -27,7 +28,8 @@
       "applicationUrl": "https://localhost:7249;http://localhost:5239",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "launchUrl": "carnacode-balta-2024-desafio-03"
     },
     "IIS Express": {
       "commandName": "IISExpress",
@@ -35,7 +37,8 @@
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "launchUrl": "carnacode-balta-2024-desafio-03"
     }
   }
 }
