--- a/Imc/Properties/launchSettings.json
+++ b/Imc/Properties/launchSettings.json
@@ -18,7 +18,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "launchUrl": "carnacode-balta-2024-desafio-03"
+      "launchUrl": "https://leonardogasperin.github.io/carnacode-balta-2024-desafio-03/"
     },
     "https": {
       "commandName": "Project",
@@ -29,7 +29,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "launchUrl": "carnacode-balta-2024-desafio-03"
+      "launchUrl": "https://leonardogasperin.github.io/carnacode-balta-2024-desafio-03/"
     },
     "IIS Express": {
       "commandName": "IISExpress",
@@ -38,7 +38,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "launchUrl": "carnacode-balta-2024-desafio-03"
+      "launchUrl": "https://leonardogasperin.github.io/carnacode-balta-2024-desafio-03/"
     }
   }
 }
