--- a/Imc/Properties/launchSettings.json
+++ b/Imc/Properties/launchSettings.json
@@ -1,5 +1,6 @@
 {
-  "$schema": "http://json.schemastore.org/launchsettings.json",
+  "$schema": "http://json.schemastore.org/launchsettings.json",,
+  "launchUrl": "https://leonardogasperin.github.io/carnacode-balta-2024-desafio-03/",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
